syntax = "proto3";

package search;

import "google/protobuf/timestamp.proto";

option go_package = "github.com/imhasandl/search-service/protos";

service SearchService {
   rpc SearchUsers (SearchUsersRequest) returns (SearchUsersResponse) {}
   rpc SearchPosts (SearchPostsRequest) returns (SearchPostsResponse) {}
   rpc SearchReports (SearchReportsRequest) returns (SearchReportsResponse) {}

   rpc Check (CheckRequest) returns (CheckResponse) {}
}

message SearchUsersRequest {
   string query = 1;
}

message SearchUsersResponse {
  repeated User users = 1; 
}

message SearchPostsRequest {
  string query = 1;
}

message SearchPostsResponse {
  repeated Post post = 1;
}

message SearchReportsRequest {
  string query = 1;
}

message SearchReportsResponse {
  repeated Report report = 1;
}

message CheckRequest {
  string check = 1;
}

message CheckResponse {
  string status = 1;
}

message User {
  string id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string email = 4;
  string username = 5;
  bool is_premium = 6;
  int32 verification_code = 7;
  bool is_verified = 8;
}

message Post {
   string id = 1;
   google.protobuf.Timestamp created_at = 2;
   google.protobuf.Timestamp updated_at = 3;
   string posted_by = 4;
   string body = 5;
   int32 views = 6;
   int32 likes = 7;
   repeated string liked_by = 8;
}

message Report {
   string id = 1;
   google.protobuf.Timestamp reported_at = 2;
   string reported_by = 3;
   string reason = 4;
}

// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative search.proto